Instruction and documentation have been refined.

--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,5 @@
 # Fresh build directory
 _fresh/
 
-# npm dependencies
-node_modules/
-
-# 
-.unotes/
-
-#
-temp/
-
+# PLIKI PROGRAMU
+download/*
