--- a/deno.json
+++ b/deno.json
@@ -14,5 +14,20 @@
       "lineWidth": 80,
       "singleQuote": true
     }
+  },
+  "imports": {
+    "@cliffy/ansi": "jsr:@cliffy/ansi@^1.0.0-rc.4",
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.4",
+    "@cliffy/flags": "jsr:@cliffy/flags@^1.0.0-rc.4",
+    "@cliffy/keycode": "jsr:@cliffy/keycode@^1.0.0-rc.4",
+    "@cliffy/keypress": "jsr:@cliffy/keypress@^1.0.0-rc.4",
+    "@cliffy/prompt": "jsr:@cliffy/prompt@^1.0.0-rc.4",
+    "@cliffy/table": "jsr:@cliffy/table@^1.0.0-rc.4",
+    "@cliffy/testing": "jsr:@cliffy/testing@^1.0.0-rc.4",
+    "@std/assert": "jsr:@std/assert@^1.0.0-rc.2",
+    "@std/fmt": "jsr:@std/fmt@^0.225.4",
+    "@std/fs": "jsr:@std/fs@^1.0.0-rc.1",
+    "@std/path": "jsr:@std/path@^1.0.0-rc.2",
+    "@std/toml": "jsr:@std/toml@^1.0.0-rc.2"
   }
 }
