added functions to verify, the correctness of configuration files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
     "serializacją",
     "skanoteki",
     "skrobaczSkanoteki",
+    "Sprawdzacz",
     "successionalia",
     "sygnaturalne",
     "wylistowanego"
