Provided assistance with the verification of configuration files.
To ensure the integrity of the system, functions have been created to restore standard configurations in the event that unacceptable values are set or configuration files are deleted.

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-write pobieracz-skanoteki.ts"
+    "start": "deno run --allow-net --allow-read --allow-write pobieracz-skanoteki.ts",
+    "dev": "deno run -A --watch=Core/ Core/Start.ts"
   },
   "version": "0.0.2",
   "compilerOptions": {
