A new function has been created to generate a list of available archives.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,13 +40,15 @@
     "podścieżką",
     "pupillaria",
     "serializacją",
+    "Skanoteka",
     "skanoteki",
     "skrobaczSkanoteki",
     "Sprawdzacz",
     "successionalia",
     "sygnaturalne",
     "uruchomieniowy",
-    "wylistowanego"
+    "wylistowanego",
+    "zesp"
   ],
   "css.customData": [
     ".vscode/tailwind.json"
