--- a/deno.json
+++ b/deno.json
@@ -1,34 +1,44 @@
 {
-  "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-write pobieracz-skanoteki.ts",
-    "dev": "deno run -A --watch=Core/ Core/Start.ts"
-  },
-  "version": "0.0.2",
-  "compilerOptions": {
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noUncheckedIndexAccess": true
-  },
-  "fmt": {
-    "options": {
-      "useTabs": true,
-      "lineWidth": 80,
-      "singleQuote": true
-    }
-  },
-  "imports": {
-    "@cliffy/ansi": "jsr:@cliffy/ansi@^1.0.0-rc.4",
-    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.4",
-    "@cliffy/flags": "jsr:@cliffy/flags@^1.0.0-rc.4",
-    "@cliffy/keycode": "jsr:@cliffy/keycode@^1.0.0-rc.4",
-    "@cliffy/keypress": "jsr:@cliffy/keypress@^1.0.0-rc.4",
-    "@cliffy/prompt": "jsr:@cliffy/prompt@^1.0.0-rc.4",
-    "@cliffy/table": "jsr:@cliffy/table@^1.0.0-rc.4",
-    "@cliffy/testing": "jsr:@cliffy/testing@^1.0.0-rc.4",
-    "@std/assert": "jsr:@std/assert@^1.0.0-rc.2",
-    "@std/fmt": "jsr:@std/fmt@^0.225.4",
-    "@std/fs": "jsr:@std/fs@^1.0.0-rc.1",
-    "@std/path": "jsr:@std/path@^1.0.0-rc.2",
-    "@std/toml": "jsr:@std/toml@^1.0.0-rc.2"
-  }
+	"tasks": {
+		"start": "deno run --allow-net --allow-read --allow-write pobieracz-skanoteki.ts",
+		"dev": "deno run -A --watch=Core/ Core/Start.ts"
+	},
+	"version": "0.0.2",
+	"compilerOptions": {
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noUncheckedIndexAccess": true
+	},
+	"fmt": {
+		"options": {
+			"useTabs": true,
+			"lineWidth": 80,
+			"singleQuote": true
+		}
+	},
+	"imports": {
+		"@b-fuze/deno-dom": "jsr:@b-fuze/deno-dom@^0.1.47",
+		"@cliffy/ansi": "jsr:@cliffy/ansi@^1.0.0-rc.4",
+		"@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.4",
+		"@cliffy/flags": "jsr:@cliffy/flags@^1.0.0-rc.4",
+		"@cliffy/keycode": "jsr:@cliffy/keycode@^1.0.0-rc.4",
+		"@cliffy/keypress": "jsr:@cliffy/keypress@^1.0.0-rc.4",
+		"@cliffy/prompt": "jsr:@cliffy/prompt@^1.0.0-rc.4",
+		"@cliffy/table": "jsr:@cliffy/table@^1.0.0-rc.4",
+		"@cliffy/testing": "jsr:@cliffy/testing@^1.0.0-rc.4",
+		"@std/assert": "jsr:@std/assert@^1.0.0-rc.2",
+		"@std/datetime": "jsr:@std/datetime@^0.224.1",
+		"@std/fmt": "jsr:@std/fmt@^0.225.4",
+		"@std/fs": "jsr:@std/fs@^1.0.0-rc.1",
+		"@std/io": "jsr:@std/io@^0.224.2",
+		"@std/path": "jsr:@std/path@^1.0.0-rc.2",
+		"@std/toml": "jsr:@std/toml@^1.0.0-rc.2"
+	},
+	"unstable": [
+		"ffi",
+		"fs",
+		"http",
+		"net",
+		"temporal"
+	]
 }
